Fix/spacing and fonts (#932)
* fix spacing and fonts

* bump version and build

--- a/src/scss/sections/components/financial.scss
+++ b/src/scss/sections/components/financial.scss
@@ -1,27 +1,42 @@
 .financial-container {
-  --financial-button-bar-height: 54px;
-  --selector-search-box-height: 44px;
+  --financial-button-bar-height: 70px;
+  --selector-search-box-height: 62px;
 
   --financial-body-height: calc(100vh - var(--body-height) - var(--component-header-height) - var(--financial-button-bar-height));
   --selector-body-height: calc(100vh - var(--body-height) - var(--component-header-height) - var(--financial-button-bar-height) - var(--selector-search-box-height));
+}
+
+@media (max-width: $screen-sm) {
+  .financial-container {
+    --financial-body-height: calc(100vh - var(--body-height) - var(--financial-button-bar-height));
+    --selector-body-height: calc(100vh - var(--body-height) - var(--financial-button-bar-height) - var(--selector-search-box-height));
+  }
 }
 
 .instrument-list {
   height: var(--financial-body-height);
   overflow-x: hidden;
   overflow-y: auto;
+
+  .instrument-row {
+    padding: 13px 0px 10px;
+  }
 }
 
 .instrument-selector {
   height: var(--selector-body-height);
-  padding-top: 10px;
+  padding-top: 0px;
   overflow-x: hidden;
   overflow-y: auto;
+
+  .instrument-row {
+    padding: 13px 0px 7px;
+  }
 }
 
 .instrument-selector-search-box {
-  padding: 0px 0px 10px;
-  margin: -1px 20px 0px;
+  padding: 0px 0px 20px;
+  margin: 0px 20px 20px;
   border-bottom: 1px solid rgb(230, 230, 230);
 }
 
@@ -51,7 +66,6 @@
 
 .instrument-row {
   border-bottom: 1px solid rgb(242, 242, 242);
-  padding: 0.5em 0px;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -139,16 +153,18 @@
 
 .instrument-selector-name {
   display: inline-block;
-  margin-left: 1.75em;
+  margin-left: 30px;
 }
 
 .instrument-selector-no-results {
   color: rgb(77, 77, 77);
+  margin: 0px 20px;
 
   & > h2 {
     font-size: 1.2em;
-    font-weight: bold;
+    font-weight: 700;
     padding: 20px 0px;
+    margin-top: 0px;
   }
 
   & > div:first-child {
@@ -174,9 +190,11 @@
 
 .financial-action-button-bar {
   height: var(--financial-button-bar-height);
-  padding: 10px 20px;
+  padding: 0px 20px;
 
   & > div {
     background: #FFF;
+    padding: 18px 0;
+    border-top: 1px solid #e6e6e6;
   }
 }
