--- a/src/scss/sections/template-editor-layout.scss
+++ b/src/scss/sections/template-editor-layout.scss
@@ -1,9 +1,9 @@
 .template-editor {
   --header-height: 93px;
-  --toolbar-height: 50px;
+  --toolbar-height: 78px;
   --footer-height: 98px;
   --sidebar-width: 400px;
-  --component-header-height: 44px;
+  --component-header-height: 63px;
   --preview-holder-height: 200px;
 
   &.active-banner-mode { --header-height : 111px; }
@@ -31,7 +31,7 @@
   align-items: center;
   z-index: 100;
   border-bottom: 2px solid #f2f2f2;
-  padding: 18px 0px;
+  padding: 38px 0px;
   margin: 0px 20px;
   overflow: hidden;
   text-overflow: clip;
@@ -44,8 +44,8 @@
 
   & .presentation-name {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 22px;
+    font-weight: bold;
     margin: 0;
     padding: 0;
     line-height: 32px;
@@ -207,6 +207,10 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    & a {
+      margin-right: 18px;
+    }
   }
 
   & .attribute-edit {
@@ -217,7 +221,7 @@
     font-size: 1.2em;
     font-weight: bold;
     border-bottom: 1px solid rgb(230, 230, 230);
-    padding: 10px 0px;
+    padding: 20px 0px 19px;
     margin: 0px 20px;
   }
 
@@ -227,11 +231,12 @@
 }
 
 .template-editor-footer {
-  padding: 0px 10px;
+  padding: 0px 20px;
   background-color: #FFF;
 
   & > div {
     border-top: 2px solid #f2f2f2;
+    padding-top: 10px;
   }
 
   & .btn {
